# nexium-wrapper

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  setup-discord-actions.ps1
.github/workflows/: build-check.yml  discord-alerts.yml  telegram-push.yml
scripts/: build.ps1  dev.ps1  publish.ps1
src/: config.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
